# ada-2024-project-outliars

./: .gitignore  CMakeLists.txt  README.md  analysis.ipynb  novastrategija.txt  questions.txt  results.ipynb  scoring.ipynb  scoring_v2.ipynb
data/paths-and-graph/: node_data.tsv  pair_data.tsv  unique_games.tsv
src/: data_processing.py  graph_processing.py  graph_stats.cxx  ingame_analysis.ipynb  ingame_analysis_2.ipynb  initial_analysis.ipynb  scoring.ipynb  scoring_v2.ipynb
src/data/: model_performance.csv  topic_fame_updated.csv
src/data_augmentation/: direct_link_expectancy.py  fame_rater.py  fame_update.py
src/models/: logistic_regression.py
src/scripts/: LLM_benchmark.py  graph_stats.cxx  o1mini-benchmark.py
src/scripts/data_augmentation/: custom_direct_link.py  direct_link_expectancy.py  direct_link_update.py  fame_rater.py  fame_single_update.py  fame_update.py
src/utils/: article-embeddings.ipynb  data_processing.py  data_viz.py  graph_processing.py  ingame_processing.py
